<resources>
    <string name="app_name">ms</string>
    <string name="unused_string">MyStudyDemo</string>
    <string name="bt_content_sencondprocess">到下一Activity</string>
    <string name="text_surface">到Surface——training页面</string>
    <string name="text_process">到Process——training页面</string>
    <string name="text_input">到InputManager——training页面</string>
    <string name="text_test">测试</string>
    <string name="text_event_bus">到EventBus——training页面</string>
    <string name="text_focus">到Focus——training页面</string>
    <string name="text_progressbar">到ProgressBar-training页面</string>
    <string name="text_shadow">到Shadow-training页面</string>
    <string name="net">net</string>
    <string name="okHttp">okHttp</string>
    <string name="volley">volley</string>
    <string name="string_request">string_request</string>
    <string name="json_request">json_request</string>
    <string name="view">view</string>
    <string name="progress_bar">progress_bar</string>
    <string name="activity_cycle">Activity_Cycle</string>
    <string name="activity_button">button 点击</string>
    <string name="activity_animation">动画</string>
    <string name="activity_thread">线程</string>
    <string name="activity_ble">BLE</string>
    <string name="activity_status_bar">状态栏</string>
    <string name="activity_glide">Glide</string>
    <string name="rotate">旋转</string>
    <string name="scale">缩放</string>
    <string name="animation">动画</string>
    <string name="no">无</string>
    <string name="start">开始</string>
    <string name="start_open_direct">开始-直接打开</string>
    <string name="start_open_system">开始-系统打开</string>
    <string name="test">测试</string>
    <string name="scroll_to">scroll_to</string>
    <string name="scroll_by">scroll_by</string>
    <string name="load_img">load_img</string>
</resources>
