<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:id="@+id/bt_start"
        android:text="@string/start_open_direct"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:id="@+id/bt_start_system"
        android:text="@string/start_open_system"/>
    <Button
        android:id="@+id/bt_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:text="@string/text_input"/>
</LinearLayout>